<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:id="@+id/rl"
    android:background="@color/greena400"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@drawable/oblmain"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/relativeLayout">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <FrameLayout
                android:id="@+id/FrameLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin_ll"
            android:layout_marginTop="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin_ll"
            android:paddingRight="@dimen/activity_horizontal_margin_ll"
            android:paddingTop="@dimen/activity_vertical_margin_ll">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newjournal"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="@dimen/activity_button_margin_top"
                android:shadowColor="@android:color/transparent"
                android:id="@+id/newjournal"
                android:theme="@style/MyButton"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/button4"
                android:layout_alignEnd="@+id/button4" />

            <Button
                android:layout_width="match_parent"
                android:minHeight="0dp"
                android:maxHeight="40dp"
                android:textSize="@dimen/text_size"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/activity_button_margin_top"
                android:text="@string/lections"
                android:id="@+id/lections"
                android:layout_below="@+id/newjournal"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="@dimen/activity_button_margin_top"
                android:text="@string/events"
                android:id="@+id/events"
                android:layout_below="@+id/lections"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="@dimen/activity_button_margin_top"
                android:text="@string/information"
                android:id="@+id/information"
                android:layout_below="@+id/events"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="@dimen/activity_button_margin_top"
                android:text="@string/elect"
                android:id="@+id/elect"
                android:layout_marginBottom="@dimen/activity_button_margin_bottom"
                android:layout_below="@+id/information"
                android:layout_centerHorizontal="true" />

        </LinearLayout>
            </FrameLayout>
</ScrollView>
    </RelativeLayout>


</RelativeLayout>
